# sparkit

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  initial-cache.cmake  sanitizing-cache.cmake
.github/workflows/: ci.yml
cmake/: sparkit_deps.cmake
scripts/: check-format.sh
sparkit/: CMakeLists.txt  config.hpp.in  data.hpp  sparkit.hpp
sparkit/data/: Block_sparse_row_matrix.hpp  Block_sparse_row_sparsity.cpp  Block_sparse_row_sparsity.hpp  Block_sparse_row_sparsity_Impl.cpp  Block_sparse_row_sparsity_Impl.hpp  Compressed_column_matrix.hpp  Compressed_column_sparsity.cpp  Compressed_column_sparsity.hpp  Compressed_column_sparsity_Impl.cpp  Compressed_column_sparsity_Impl.hpp  Compressed_row_matrix.hpp  Compressed_row_sparsity.cpp  Compressed_row_sparsity.hpp  Compressed_row_sparsity_Impl.cpp  Compressed_row_sparsity_Impl.hpp  Coordinate_matrix.hpp  Coordinate_sparsity.cpp  Coordinate_sparsity.hpp  Coordinate_sparsity_Impl.cpp  Coordinate_sparsity_Impl.hpp  Diagonal_matrix.hpp  Diagonal_sparsity.cpp  Diagonal_sparsity.hpp  Diagonal_sparsity_Impl.cpp  Diagonal_sparsity_Impl.hpp  Ellpack_matrix.hpp  Ellpack_sparsity.cpp  Ellpack_sparsity.hpp  Ellpack_sparsity_Impl.cpp  Ellpack_sparsity_Impl.hpp  Entry.hpp  Index.cpp  Index.hpp  Jagged_diagonal_matrix.hpp  Jagged_diagonal_sparsity.cpp  Jagged_diagonal_sparsity.hpp  Jagged_diagonal_sparsity_Impl.cpp  Jagged_diagonal_sparsity_Impl.hpp  Modified_sparse_row_matrix.hpp  Modified_sparse_row_sparsity.cpp  (+93 more)
sparkit/utility/: exceptions.hpp
sparkit_testing/: CMakeLists.txt  amg_aggregation_test.cpp  amg_cycle_test.cpp  amg_prolongation_test.cpp  amg_setup_test.cpp  amg_solver_test.cpp  amg_strength_test.cpp  arnoldi_eig_test.cpp  assembly_tree_test.cpp  bicg_test.cpp  bicgstab_test.cpp  block_jacobi_test.cpp  block_sparse_row_data_test.cpp  block_sparse_row_matrix_test.cpp  cgs_test.cpp  chebyshev_preconditioner_test.cpp  chebyshev_test.cpp  column_sum_test.cpp  compressed_column_data_test.cpp  compressed_column_matrix_test.cpp  compressed_data_test.cpp  conditioning_test.cpp  conjugate_gradient_test.cpp  dense_bidiagonal_svd_test.cpp  dense_hessenberg_eigen_test.cpp  dense_tridiagonal_eigen_test.cpp  diagnostics_test.cpp  diagonal_data_test.cpp  diagonal_matrix_test.cpp  eigen_target_test.cpp  elimination_tree_test.cpp  ellpack_data_test.cpp  ellpack_matrix_test.cpp  fgmres_test.cpp  gmres_test.cpp  harwell_boeing_test.cpp  ict_test.cpp  ilu_test.cpp  ilut_test.cpp  incomplete_cholesky_test.cpp  (+42 more)
