find_package(Catch2 REQUIRED)

macro(sparkit_add_test test_name)
  set(exe_name ${test_name}_test)
  set(src_name ${exe_name}.cpp)
  add_executable(${exe_name} ${src_name})
  target_link_libraries(${exe_name} PRIVATE
    sparkit::header
    sparkit::shared
    nlohmann_json::nlohmann_json
    Catch2::Catch2WithMain)
  set_target_properties(${exe_name}
    PROPERTIES
    CXX_STANDARD ${sparkit_CXX_STANDARD})
  add_test(${test_name} ${exe_name})
endmacro()

sparkit_add_test(shape shape_test shape_test.cpp)
sparkit_add_test(compressed_data compressed_data_test compressed_data_test.cpp)
sparkit_add_test(sparse_matrix sparse_matrix_test sparse_matrix_test.cpp)
sparkit_add_test(sparse_blas sparse_blas_test sparse_blas_test.cpp)
sparkit_add_test(compressed_column_data compressed_column_data_test compressed_column_data_test.cpp)
sparkit_add_test(compressed_column_matrix compressed_column_matrix_test compressed_column_matrix_test.cpp)
sparkit_add_test(modified_sparse_row_data modified_sparse_row_data_test modified_sparse_row_data_test.cpp)
sparkit_add_test(modified_sparse_row_matrix modified_sparse_row_matrix_test modified_sparse_row_matrix_test.cpp)
sparkit_add_test(diagonal_data diagonal_data_test diagonal_data_test.cpp)
sparkit_add_test(diagonal_matrix diagonal_matrix_test diagonal_matrix_test.cpp)
sparkit_add_test(ellpack_data ellpack_data_test ellpack_data_test.cpp)
sparkit_add_test(ellpack_matrix ellpack_matrix_test ellpack_matrix_test.cpp)
sparkit_add_test(block_sparse_row_data block_sparse_row_data_test block_sparse_row_data_test.cpp)
sparkit_add_test(block_sparse_row_matrix block_sparse_row_matrix_test block_sparse_row_matrix_test.cpp)
sparkit_add_test(jagged_diagonal_data jagged_diagonal_data_test jagged_diagonal_data_test.cpp)
sparkit_add_test(jagged_diagonal_matrix jagged_diagonal_matrix_test jagged_diagonal_matrix_test.cpp)
sparkit_add_test(symmetric_compressed_row_data symmetric_compressed_row_data_test symmetric_compressed_row_data_test.cpp)
sparkit_add_test(symmetric_compressed_row_matrix symmetric_compressed_row_matrix_test symmetric_compressed_row_matrix_test.cpp)
sparkit_add_test(symmetric_coordinate_data symmetric_coordinate_data_test symmetric_coordinate_data_test.cpp)
sparkit_add_test(symmetric_coordinate_matrix symmetric_coordinate_matrix_test symmetric_coordinate_matrix_test.cpp)
sparkit_add_test(symmetric_block_sparse_row_data symmetric_block_sparse_row_data_test symmetric_block_sparse_row_data_test.cpp)
sparkit_add_test(symmetric_block_sparse_row_matrix symmetric_block_sparse_row_matrix_test symmetric_block_sparse_row_matrix_test.cpp)
sparkit_add_test(unary unary_test unary_test.cpp)
sparkit_add_test(info info_test info_test.cpp)
sparkit_add_test(spmv spmv_test spmv_test.cpp)
sparkit_add_test(matrix_market matrix_market_test matrix_market_test.cpp)
sparkit_add_test(harwell_boeing harwell_boeing_test harwell_boeing_test.cpp)
sparkit_add_test(json_serialization json_serialization_test json_serialization_test.cpp)
sparkit_add_test(permutation permutation_test permutation_test.cpp)
sparkit_add_test(reordering reordering_test reordering_test.cpp)
sparkit_add_test(elimination_tree elimination_tree_test elimination_tree_test.cpp)
sparkit_add_test(symbolic_cholesky symbolic_cholesky_test symbolic_cholesky_test.cpp)
sparkit_add_test(numeric_cholesky numeric_cholesky_test numeric_cholesky_test.cpp)
sparkit_add_test(triangular_solve triangular_solve_test triangular_solve_test.cpp)
sparkit_add_test(incomplete_cholesky incomplete_cholesky_test incomplete_cholesky_test.cpp)
sparkit_add_test(conjugate_gradient conjugate_gradient_test conjugate_gradient_test.cpp)
sparkit_add_test(gmres gmres_test gmres_test.cpp)
sparkit_add_test(fgmres fgmres_test fgmres_test.cpp)
sparkit_add_test(bicgstab bicgstab_test bicgstab_test.cpp)
sparkit_add_test(bicg bicg_test bicg_test.cpp)
sparkit_add_test(qmr qmr_test qmr_test.cpp)
sparkit_add_test(lsqr lsqr_test lsqr_test.cpp)
sparkit_add_test(cgs cgs_test cgs_test.cpp)
sparkit_add_test(richardson richardson_test richardson_test.cpp)
sparkit_add_test(chebyshev chebyshev_test chebyshev_test.cpp)
sparkit_add_test(minres minres_test minres_test.cpp)
sparkit_add_test(jacobi jacobi_test jacobi_test.cpp)
sparkit_add_test(block_jacobi block_jacobi_test block_jacobi_test.cpp)
sparkit_add_test(ssor ssor_test ssor_test.cpp)
sparkit_add_test(ilu ilu_test ilu_test.cpp)
sparkit_add_test(ilut ilut_test ilut_test.cpp)
sparkit_add_test(ict ict_test ict_test.cpp)
sparkit_add_test(eigen_target eigen_target_test eigen_target_test.cpp)
sparkit_add_test(dense_tridiagonal_eigen dense_tridiagonal_eigen_test dense_tridiagonal_eigen_test.cpp)
sparkit_add_test(lanczos lanczos_test lanczos_test.cpp)
sparkit_add_test(dense_hessenberg_eigen dense_hessenberg_eigen_test dense_hessenberg_eigen_test.cpp)
sparkit_add_test(arnoldi_eig arnoldi_eig_test arnoldi_eig_test.cpp)
sparkit_add_test(dense_bidiagonal_svd dense_bidiagonal_svd_test dense_bidiagonal_svd_test.cpp)
sparkit_add_test(svd svd_test svd_test.cpp)
sparkit_add_test(column_sum column_sum_test column_sum_test.cpp)
sparkit_add_test(amg_strength amg_strength_test amg_strength_test.cpp)
sparkit_add_test(amg_aggregation amg_aggregation_test amg_aggregation_test.cpp)
sparkit_add_test(amg_prolongation amg_prolongation_test amg_prolongation_test.cpp)
sparkit_add_test(amg_setup amg_setup_test amg_setup_test.cpp)
sparkit_add_test(amg_cycle amg_cycle_test amg_cycle_test.cpp)
sparkit_add_test(sparse_qr sparse_qr_test sparse_qr_test.cpp)
sparkit_add_test(supernode supernode_test supernode_test.cpp)
sparkit_add_test(assembly_tree assembly_tree_test assembly_tree_test.cpp)
sparkit_add_test(multifrontal_symbolic multifrontal_symbolic_test multifrontal_symbolic_test.cpp)
sparkit_add_test(multifrontal_numeric multifrontal_numeric_test multifrontal_numeric_test.cpp)
sparkit_add_test(multifrontal_solve multifrontal_solve_test multifrontal_solve_test.cpp)
sparkit_add_test(multifrontal multifrontal_test multifrontal_test.cpp)
sparkit_add_test(neumann_preconditioner neumann_preconditioner_test neumann_preconditioner_test.cpp)
sparkit_add_test(chebyshev_preconditioner chebyshev_preconditioner_test chebyshev_preconditioner_test.cpp)
sparkit_add_test(least_squares_preconditioner least_squares_preconditioner_test least_squares_preconditioner_test.cpp)
sparkit_add_test(amg_solver amg_solver_test amg_solver_test.cpp)
sparkit_add_test(ldlt ldlt_test ldlt_test.cpp)
sparkit_add_test(sparse_lu sparse_lu_test sparse_lu_test.cpp)
sparkit_add_test(matgen matgen_test matgen_test.cpp)
